--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
 
 <head>
   <title>mein leben</title>
-  <link href="bootstrap.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'default', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="col-xs-12"></div>
       <div class="col-lg-8 col-md-8 col-xs-12 ">mein leben
-        <img src="C:\Users\User\Desktop\snzhrhtml\logo.jpg">
+        <img src="logo.jpg">
       </div>
       <div class="col-lg-4 col-md-4 col-xs-12 ">
         <form>
