--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -4,6 +4,7 @@
 .footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 60px;
     background-color: #f5f5f5;
