--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,16 @@
 <head>
   <title>mein leben</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+  
+  <!-- Latest compiled and minified JS -->
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  
   <%= csrf_meta_tags %>
-
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <%= render 'shared/favicon' %>
 </head>
 
 <body>
@@ -23,9 +28,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MeinLeben</a>
+        <a class="navbar-brand" href="#">MeinLeben</a>
       </div>
-
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -69,7 +73,6 @@
     <!-- /.container-fluid -->
   </nav>
   <div class="container">
-
     <div class="row">
       <div class="col-xs-12"></div>
       <div class="col-lg-8 col-md-8 col-xs-12 ">mein leben
@@ -84,17 +87,20 @@
           <div class="form-group ">
             <label for="exampleInputPassword1 ">Password</label>
             <input type="password " class="form-control " id="exampleInputPassword1 " placeholder="Password ">
-            <button type="button " class="btn btn-primary btn-lg ">Registration</button>
-            <button type="button " class="btn btn-primary btn-lg ">Login</button>
+          </div>
+          <div class="form-group">
+            <button type="button " class="btn btn-primary">Registration</button>
+            <button type="button " class="btn btn-primary">Login</button>
+          </div>
         </form>
-        </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="container ">
-        <p>All Rights Reserved 2017</p>
-      </div>
+  </div>
+  <div class="footer">
+    <div class="container ">
+      <p>All Rights Reserved 2017</p>
     </div>
+  </div>
 </body>
 
 </html>
