--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.rWrap {
+    padding-top: 100px;
+    margin: -60px -15px !important;
+    height: 100vh;
+    background: url("https://images.unsplash.com/photo-1484100356142-db6ab6244067?dpr=1&auto=compress,format&fit=crop&w=1199&h=907&q=80&cs=tinysrgb&crop=")
+}
