--- a/app/views/static/main.html.erb
+++ b/app/views/static/main.html.erb
@@ -1,1 +1,24 @@
-<h1>hello mfk</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12"></div>
+        <div class="col-lg-8 col-md-8 col-xs-12 ">mein leben
+            <img src="logo.jpg">
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-12 ">
+            <form>
+                <div class="form-group ">
+                    <label for="exampleInputEmail1 ">Email address</label>
+                    <input type="email " class="form-control " id="exampleInputEmail1 " placeholder="Email ">
+                </div>
+                <div class="form-group ">
+                    <label for="exampleInputPassword1 ">Password</label>
+                    <input type="password " class="form-control " id="exampleInputPassword1 " placeholder="Password ">
+                </div>
+                <div class="form-group">
+                    <button type="button " class="btn btn-primary">Login</button>
+                    <a href="<%= new_user_path %>" class="btn btn-primary">Registration</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
