--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .rWrap {
     padding-top: 100px;
-    margin: -60px -15px !important;
+   
     height: 100vh;
-    background: url("https://images.unsplash.com/photo-1484100356142-db6ab6244067?dpr=1&auto=compress,format&fit=crop&w=1199&h=907&q=80&cs=tinysrgb&crop=")
+    background: url("https://images.unsplash.com/photo-1484100356142-db6ab6244067?dpr=1&auto=compress,format&fit=crop&w=1199&h=907&q=80&cs=tinysrgb&crop=");
+
+    .panel{
+        background: rgba(255,255,255,0.7)
+    }
 }
