--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,6 @@
 <%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+ <%= render 'shared/errors', model: user %>
+  
   <div class="form-group">
   <div class="field">
     <%= f.label :name %>
@@ -20,6 +11,16 @@
   <div class="field">
     <%= f.label :email %>
     <%= f.text_field :email, class:'form-control' %>
+    </div>
+ <div class="form-group">
+  <div class="field">
+    <%= f.label :bday %>
+    <%= f.date_field :bday, class:'form-control' %>
+    </div>
+ <div class="form-group">
+  <div class="field">
+    <%= f.label :ssex %>
+    <%= f.select :ssex, [['Male', 1], ['Female', 0]], {}, class:'form-control' %>
     </div>
   </div>
    <div class="form-group">
